Fixed overflow

--- a/src/pages/Movies/Movies.scss
+++ b/src/pages/Movies/Movies.scss
@@ -32,7 +32,7 @@
 
   .c-collection__movies {
     height: 440px;
-    overflow-y: hidden;
+    overflow: hidden;
     position: relative;
 
     .c-movie__line {
